@@ -36,12 +36,15 @@ import java.time.Period;
 import java.util.List;
 
 /**
- * 患者管理服务实现（管理员视角）。
+ * 患者管理服务实现（医生/管理员通用）。
  *
  * <p>患者列表范围：通过 consult_record → doctor.hospital_id 关联，
- * 仅返回在本院就诊过的患者；所有操作基于当前登录管理员所属医院（{@code hospital_id}）
+ * 仅返回在本院就诊过的患者；所有操作基于当前登录用户所属医院（{@code hospital_id}）
  * 做数据隔离。详情页附加过敏史（{@code patient_allergy}）与既往史（{@code patient_medical_history}），
  * 当前用药页附加 ACTIVE/PAUSED 状态的用药计划与未完成的随访计划。
+ *
+ * @author lezoo17
+ * @since 2026-08-09
  */
 @Slf4j
 @Service
@@ -77,8 +80,10 @@ public class PatientServiceImpl implements PatientService {
 
     @Override
     public PageResult<PatientListVO> page(String name, int page, int size) {
-        Long hospitalId = currentUserService.getCurrentHospitalId();
-        size = Math.max(1, Math.min(size, MAX_PAGE_SIZE));
+        // 用 DataScope 而非 getCurrentHospitalId：患者列表对医生/管理员通用，
+        // 均按各自所属医院过滤，不再强制 ADMIN
+        Long hospitalId = currentUserService.getCurrentDataScope().hospitalId();
+        size = Math.clamp(size, 1, MAX_PAGE_SIZE);
 
         Page<PatientListVO> result = patientDataMapper.selectPatientPage(
                 new Page<>(page, size), hospitalId,
@@ -96,6 +101,7 @@ public class PatientServiceImpl implements PatientService {
     public PatientDetailVO detail(Long id) {
         Patient patient = getPatient(id);
 
+        // 手动过滤软删记录：本模块未启用 @TableLogic 自动过滤，遗漏此条件会泄漏已删数据
         List<PatientAllergy> allergies = allergyMapper.selectList(
                 Wrappers.<PatientAllergy>lambdaQuery()
                         .eq(PatientAllergy::getPatientId, id)
@@ -133,7 +139,7 @@ public class PatientServiceImpl implements PatientService {
 
     @Override
     public PageResult<PatientVisitVO> visits(Long patientId, int page, int size) {
-        size = Math.max(1, Math.min(size, MAX_PAGE_SIZE));
+        size = Math.clamp(size, 1, MAX_PAGE_SIZE);
         getPatient(patientId);
 
         Page<PatientVisitVO> result = patientDataMapper.selectVisitPage(
@@ -143,7 +149,7 @@ public class PatientServiceImpl implements PatientService {
 
     @Override
     public PageResult<PatientPrescriptionVO> prescriptions(Long patientId, int page, int size) {
-        size = Math.max(1, Math.min(size, MAX_PAGE_SIZE));
+        size = Math.clamp(size, 1, MAX_PAGE_SIZE);
         getPatient(patientId);
 
         Page<PatientPrescriptionVO> result = patientDataMapper.selectPrescriptionPage(
@@ -228,7 +234,7 @@ public class PatientServiceImpl implements PatientService {
     }
 
     /**
-     * 手机号脱敏。手机号以密文存储，无法在服务端做精准脱敏，
+     * 手机号脱敏。手机号以密文存储（隐私合规要求），服务端无法还原原文做精准脱敏，
      * 统一返回 {@link #PHONE_MASK_PLACEHOLDER} 占位避免泄露明文长度。
      *
      * @param phoneCiphertext 手机号密文（可空）
